--- a/pages/research.wikitext
+++ b/pages/research.wikitext
@@ -1,3 +1,5 @@
+<div style="float:right; margin:-1.5em 0 0 2em;">__TOC__</div>
+
 The ''Lab'' tab is where you can research ships, fleet technology, and gear. It contains five sections:
 
 *[[Fleet Technology]] provides small stat bonuses for all fully limit broken ships by unlocking and levelling ships, and by upgrading Faction Tech.
@@ -6,7 +8,6 @@ The ''Lab'' tab is where you can research ships, fleet technology, and gear. It 
 *[[Gear Lab]], where gears can be crafted from other gears and Crafting Materials.
 *[[META Lab]], where META ships can be enhanced, limit broken, and decided which skill to level.
 
-''Clicking on an Image opens their respective Wiki page.''
 {{Image Gallery|width=400|height=
 | ShipworkImage.png | [[Shipyard]] | Shipyard
 | Fleet Technology Window.png | [[Fleet Technology]] | Fleet Technology
@@ -15,15 +16,13 @@ The ''Lab'' tab is where you can research ships, fleet technology, and gear. It 
 | META Lab UI.png | [[META Lab]] | META Lab
 }}
 
-<!-- ==Shipyard==
+==Shipyard==
 {{Main|Shipyard}}
-[[File:ShipworkImage.png|350px|left|thumb|Ship development page featuring [[Kansas]].]]
 
 Unlocked at commander level 30, the Shipyard contains obtainable special ships of [[:Category:Priority ships|Priority]] (Super Rare) and [[:Category:Decisive ships|Decisive]] (Ultra Rare) rarity, known as '''PR/DR Ships'''.
 
 ==Fleet Technology ==
 {{main|Fleet Technology}}
-[[File:Fleet Technology Window.png|350px|right|thumb|Fleet Technology UI]]
 
 This system allows you to gather bonuses for '''maximum limit break''' ships of each type. Bonuses are earned by each shipgirl in two ways:
 
@@ -34,7 +33,6 @@ Multiple copies of the same shipgirl do not give additional stats or tech points
 
 ==Research Academy==
 {{main|Research Academy}}
-[[File:TechacademyImage.png|350px|right|thumb|Five available research options to pick from with one daily reset available.]]
 
 Unlocked at Commander Level 30, the Research Academy is a place where the player can undertake Research Projects. Projects may require the player to pay resources or complete an objective, and it takes time to complete. When completed, Projects can produce General Blueprints and other rewards.
 
@@ -66,7 +64,6 @@ As of the release of PR4 in July 2021, ships from previous PR seasons that are m
 
 ==Gear Lab==
 {{main|Gear Lab}}
-[[File:Gear Lab Crafting.jpg|350px|right|thumb|F7F Tigercat being crafted in the Gear Lab.]]
 
 In the Gear Lab you can construct a number of weapons from the factions Eagle Union, Royal Navy, Iron Blood, Sakura Empire and Iris Orthodoxy. Each faction is separated into tabs for each type of Main Gun, each type of Aircraft, and both Submarine and Surface Torpedoes. Each tab contains a tree starting with Rare or Elite equipment and working up to SR or UR equipment. 
 
@@ -75,10 +72,9 @@ Crafting an Equipment requires 3 '''Crafting Materials''' in varying quantities,
 Using an enhanced item as crafting material will return some of the gold and all of the Upgrade Parts used. It is therefore usually best to use your most enhanced gear for crafting, as the parts can then be used to enhance the newly crafted gear.
 
 == META Lab ==
-{{Main|Meta Lab}}
-[[File:META Lab UI.png|thumb|META Lab UI]]
+{{Main|META Lab}}
 
 The META Lab is used to manage and upgrade [[META]] ships.
- -->
+
 
 [[Category:Gameplay]]
